--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
-/*  your css code here. If applicable */
+/* Write your CSS here */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  padding: 10px;
+}
+
+#verification_heading,
+#verification_subtext {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  font-weight: 500;
+}
+
+#verification_subtext {
+  font-weight: 400;
+  font-size: medium;
+  color: rgb(67, 67, 67);
+}
+
+.code-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.code {
+  width: 10%;
+  height: 10%;
+  padding: 20px 10px;
+  text-align: center;
+  border: 1px solid rgba(211, 211, 211, 0.548);
+  border-radius: 2px;
+  border-top: none;
+  font-size: 3rem;
+  font-weight: medium;
+}
